--- a/client/src/app/projects/project-board.component.html
+++ b/client/src/app/projects/project-board.component.html
@@ -28,12 +28,23 @@
                         <div class="col-sm-8">
                             <h2>Projects</h2>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="search-box">
-                                <i class="material-icons">&#xE8B6;</i>
-                                <input type="text" class="form-control" placeholder="Search&hellip;">
+                        <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && newProject()" #f="ngForm"
+                            novalidate>
+                            <div class="form-group">
+                                <label for="name">name</label>
+                                <input type="text" class="form-control" name="name" [(ngModel)]="form.name" required
+                                    minlength="3" maxlength="20" #username="ngModel" />
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label for="description">description</label>
+                                <input type="text" class="form-control" name="name" [(ngModel)]="form.description"
+                                    required minlength="3" maxlength="20" #username="ngModel" />
+                            </div>
+                            <div  class="form-group"
+                                style="margin:10px;padding:15px;padding-top:15px;padding-bottom:15px;">
+                                <button class="text-center add-new-list">Add new Project</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <!---->
@@ -50,11 +61,11 @@
                             <td>{{project.id}}</td>
                             <td>{{project.description}}</td>
                             <td>
-                                <a href="#" class="view" title="View" data-toggle="tooltip"><i
+                                <a class="view" title="View" (click)="redirectPage(this.project.id)"><i
                                         class="material-icons">&#xE417;</i></a>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i
+                                <a class="edit" title="Edit" data-toggle="tooltip"><i
                                         class="material-icons">&#xE254;</i></a>
-                                <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i
+                                <a class="delete" title="Delete" (click)="deleteProject(this.project.id)"><i
                                         class="material-icons">&#xE872;</i></a>
                             </td>
                         </tr>
