--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,14 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a href="/projects" routerLink="projects" class="navbar-brand">Project Manager</a>
-  
-
+    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+      <li class="navbar-brand">
+        <a>{{ name }}</a>
+      </li>
+      <li class="nav-item">
+        <a href class="nav-link" (click)="logout()">LogOut</a>
+      </li>
+    </ul>
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
       <li class="nav-item">
         <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
@@ -12,14 +18,7 @@
       </li>
     </ul>
 
-    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-      <li class="nav-item">
-        <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
-      </li>
-      <li class="nav-item">
-        <a href class="nav-link" (click)="logout()">LogOut</a>
-      </li>
-    </ul>
+    
   </nav>
 
   <div class="container">
