--- a/client/src/app/projects/project-board.component.html
+++ b/client/src/app/projects/project-board.component.html
@@ -51,14 +51,16 @@
                 <table class="table table-striped table-hover table-bordered">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Projects</th>
+                            <th>ID</th>
+                            <th>name</th>
+                            <th>Description</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let project of projects">
                             <td>{{project.id}}</td>
+                            <td>{{project.name}}</td>
                             <td>{{project.description}}</td>
                             <td>
                                 <a class="view" title="View" (click)="redirectPage(this.project.id)"><i
